# trade-backend

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  MEMORY.md  TASKS.md  TODO.md  cloudbuild.yaml  pyproject.toml
app/: main.py  mcp_server.py
app/core/: config.py
app/db/: database.py  firestore.py  models.py  schemas.py
app/db/repositories/: __init__.py  allowed_users.py  holdings.py  ocr.py  options.py  portfolios.py  settings.py
app/routers/: agent.py  auth.py  options.py  portfolios.py  settings.py  stocks.py  users.py
app/scripts/: ingest_market_demo.py
app/services/: edgar.py  finnhub.py  fmp.py  fundamentals.py  indicators.py  ocr.py  reddit.py  stocktwits.py  suggestions.py  technical_signals.py  yahoo_finance.py
